--- a/doc/changes/0.1.3.rst
+++ b/doc/changes/0.1.3.rst
@@ -28,7 +28,7 @@ Fixes
 
 - Dealing with ``NaNs`` in function :func:`~plotting.plot_connectome`.
 
-- Fix extreme values in colorbar were sometimes brok.
+- :bdg-info:`Plotting` Fix extreme values in colorbar were sometimes brok.
 
 - Fix confounds removal with single confounds.
 
