--- a/doc/changes/0.3.0.rst
+++ b/doc/changes/0.3.0.rst
@@ -15,7 +15,7 @@ support of dependencies, latest updates, highlights, changelog and enhancements.
 Changes
 -------
 
-- Function :func:`~plotting.find_cut_slices` now supports to accept :class:`~nibabel.nifti1.Nifti1Image` as an input for argument ``img``.
+- :bdg-info:`Plotting` Function :func:`~plotting.find_cut_slices` now supports to accept :class:`~nibabel.nifti1.Nifti1Image` as an input for argument ``img``.
 
 - Helper functions ``_get_mask_volume`` and ``_adjust_screening_percentile`` are now moved to ``param_validation`` file in utilities module to be used in common with Decoder object.
 
@@ -71,7 +71,7 @@ Fixes
 
 - Fix colormap issue with ``colorbar=True`` when using qualitative colormaps. Fixed in according with changes of ``matplotlib 2.0`` fixes.
 
-- Fix plotting functions to work with ``NaN`` values in the images.
+- :bdg-info:`Plotting` Fix plotting functions to work with ``NaN`` values in the images.
 
 - Fix bug related get ``dtype`` of the images with ``nibabel get_data()``.
 
@@ -82,13 +82,13 @@ Enhancements
 
 - New function :func:`~regions.connected_label_regions` to extract the connected components represented as same label to regions apart with each region labelled as unique label.
 
-- New plotting modules for surface plotting visualization. ``Matplotlib`` with version higher ``1.3.1`` is required for plotting surface data using these functions.
+- :bdg-info:`Plotting` New plotting modules for surface plotting visualization. ``Matplotlib`` with version higher ``1.3.1`` is required for plotting surface data using these functions.
 
-- Function :func:`~plotting.plot_surf` can be used for plotting surfaces mesh data with optional background.
+- :bdg-info:`Plotting` Function :func:`~plotting.plot_surf` can be used for plotting surfaces mesh data with optional background.
 
-- Function :func:`~plotting.plot_surf_stat_map` can be used for plotting statistical maps on a brain surface with optional background.
+- :bdg-info:`Plotting` Function :func:`~plotting.plot_surf_stat_map` can be used for plotting statistical maps on a brain surface with optional background.
 
-- Function :func:`~plotting.plot_surf_roi` can be used for plotting statistical maps rois onto brain surface.
+- :bdg-info:`Plotting` Function :func:`~plotting.plot_surf_roi` can be used for plotting statistical maps rois onto brain surface.
 
 - Function ``nilearn.datasets.fetch_surf_fsaverage5`` can be used for surface data object to be as background map for the above plotting functions.
 
